   - The limit on the number of fields for address prefix tracking in flow
     tables increased from 3 to 4.  For example, it is now possible to
     specify both IPv4 and IPv6 address fields at the same time:
      $ ovs-vsctl set Bridge br0 flow_tables:123=@N -- \
          --id=@N create Flow_Table \
                    name=table123 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
     This allows to significantly reduce amount of datapath flows generated
     from mixed IPv4+IPv6 flow tables, if configured.
   - Userspace datapath:
     * The default zone limit, if set, is now inherited by any zone
       that does not have a specific value defined, rather than being
       treated as a global value, aligning the behavior with that of
       the kernel datapath.
   - Linux TC offload:
     * Add support for matching tunnel flags if the kernel supports it.
     * Add support for the "Don't Fragment" (DF) flag in the encap action,
       if the kernel supports it.
   - Python:
     * Added tool called "ovs-flowviz" capable of parsing OpenFlow
       and datapath flow dumps and displaying them in several different
       formats.
   - DPDK:
     * OVS validated with DPDK 23.11.2.


v3.4.0 - 15 Aug 2024
--------------------
   - Option '--mlockall' now only locks memory pages on fault, if possible.
     This also makes it compatible with vHost Post-copy Live Migration.
   - ovs-appctl:
     * Added new option [-f|--format] to choose the output format, e.g. 'json'
       or 'text' (by default).
     * Added new option [--pretty] to print JSON output in a readable fashion.
     * 'dpif/show' and 'list-commands' now support output in JSON format.
     * Added 'ofproto/detrace' command that outputs the set of OpenFlow rules
       and groups that contributed to the creation of a specific datapath flow.
   - ovs-vsctl:
     * Added a new filter column in the Mirror table which can be used to
       apply filters to mirror ports.
   - ovs-tcpdump: